--- a/docs/manual/gui/reviewing-output.qmd
+++ b/docs/manual/gui/reviewing-output.qmd
@@ -25,7 +25,8 @@ From the menu that appears, select the **Ignore \'*fileName*\'** option (where *
 
 To ignore a class of warnings, select a warning for any file in top window and click the `r keys("Ignore")` button on the ribbon.
 From the menu that appears, select the **Ignore \'*warningId*\'** option (where *warningId* is the warning, such as "[notL10NAvailable]").
-All instances of this warning will be removed from all files. Also, this check will no longer be performed when you re-run the analysis.
+All instances of this warning will be removed from all files.
+Also, this check will no longer be performed when you re-run the analysis.
 
 ::: {.notesection data-latex=""}
 These options are also available by right clicking any warning and selecting them from the popup menu.
