Detect smart quotes in Quarto files Closes #4

--- a/docs/manual/command-line/checks.qmd
+++ b/docs/manual/command-line/checks.qmd
@@ -129,6 +129,7 @@ This is turned off by default.
 - `malformedString`
 
 Check for malformed syntax in strings (e.g., malformed HTML tags).
+This will also check for smart quotes and malformed shortcodes in *Quarto* files.
 
 - `fontIssue`
 
