Check for hyphens being used in Quarto files when en dash is appropriate

--- a/docs/manual/command-line/checks.qmd
+++ b/docs/manual/command-line/checks.qmd
@@ -125,7 +125,7 @@ This is turned off by default.
 - `malformedString`
 
 Check for malformed syntax in strings (e.g., malformed HTML tags).
-This will also check for smart quotes and malformed shortcodes in *Quarto* files.
+This will also check for smart quotes, malformed shortcodes, and misused hyphens in *Quarto* files.
 
 - `fontIssue`
 
