--- a/docs/manual/index.qmd
+++ b/docs/manual/index.qmd
@@ -87,6 +87,8 @@ The command line and GUI versions provide the following checks:
   - Malformed shortcodes.
   - Smart quotes.
     (Pandoc prefers straight quotes.)
+  - Hyphens being used as range separators.
+    (En dashes should be used.)
 
 Code formatting and other issues can also be checked for, such as:
 
